--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,12 +1,6 @@
-<!--
-Create tabs with an icon and label, using the tabs-positive style.
-Each tab's child <ion-nav-view> directive will have its own
-navigation history that also transitions its views in and out.
--->
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+<ion-tabs class="tabs-striped tabs-color-positive tabs-top">
 
-  <!-- Dashboard Tab -->
-  <ion-tab title="Subjects" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/subjects">
+  <ion-tab title="Subjects" icon-on="mcfly" icon-off="mcfly" href="#/tab/subjects">
     <ion-nav-view name="tab-subjects"></ion-nav-view>
   </ion-tab>
 
@@ -16,7 +10,7 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Account Tab -->
-  <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/myProfile">
+  <ion-tab title="Account" icon-off="ion-gear-b" icon-on="ion-ios-gear" href="#/tab/myProfile">
     <ion-nav-view name="tab-myProfile"></ion-nav-view>
   </ion-tab>
 
