--- a/www/templates/subjects/html/subjects.html
+++ b/www/templates/subjects/html/subjects.html
@@ -1,5 +1,5 @@
 <ion-view>
-  <ion-content class="padding">
+  <ion-content class="padding gray-bg">
     <ion-refresher
       pulling-text="Pull to refresh..."
       on-refresh="doRefresh()">
@@ -12,19 +12,11 @@
         <p>{{(subject.interested.length>0)? subject.description+' , interested '+subject.interested.length:subject.description}}</p>
         <div class="subject-container">
           <div>
-            <img style="width: 30px" src="/img/logo.png">
-
-
+            <img src="/img/favorite.png">
           </div>
+
           <div>
-            <img style="width: 30px" src="/img/logo.png">
-
-
-          </div>
-          <div>
-            <img style="width: 30px" src="/img/logo.png">
-
-
+            <img src="/img/chat.png">
           </div>
         </div>
 
@@ -33,7 +25,7 @@
 
 
   </ion-content>
-  <div class="bar bar-footer filter-fotter">
-    <i class="icon ion-android-star"></i>
+  <div style="height: 55px;" class="bar bar-footer filter-fotter">
+    <img style="width: 50px; height: 50px" src="/img/filter.png">
   </div>
 </ion-view>
