--- a/www/templates/tabs/html/tabs.html
+++ b/www/templates/tabs/html/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs ng-controller="tabsCtrl" class="tabs-striped tabs-color-positive tabs-top">
-  <ion-tab icon-on="add-subject-blue" icon-off="add-subject-grey" href="#/tab/addSubject">
+  <ion-tab icon-on="add-subject-blue" icon-off="add-subject-grey" href="#/tab/addSubject-s1">
     <ion-nav-view name="tab-addSubject"></ion-nav-view>
   </ion-tab>
 
