--- a/www/templates/subjects/html/addSubject-s1.html
+++ b/www/templates/subjects/html/addSubject-s1.html
@@ -1,18 +1,17 @@
-<ion-view title="s">
+<ion-view>
 
   <ion-content >
     <div class="content">
       <ion-list>
         <ion-item class="add-subject-header">
+          <i ng-click="goToChat(message)" class="icon ion-chevron-right"></i>
           <span>You are talking about...</span>
         </ion-item>
-        <ion-item class="item-avatar item-icon-right" ng-repeat="category in categories">
+        <ion-item ui-sref="tab.addSubject-s2" class="item-avatar item-icon-right" ng-repeat="category in categories">
           <img ng-src="{{category.image_url}}">
           <h2>{{category.name}}</h2>
           <i ng-click="goToChat(message)" class="icon ion-chevron-right"></i>
-
         </ion-item>
-
       </ion-list>
     </div>
   </ion-content>
