--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -21,3 +21,463 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 
+@font-face {
+  font-family: 'loudly';
+  src: url('../fonts/loudly.ttf');
+}
+@font-face {
+  font-family: 'thinkout';
+  src: url('../fonts/thinkout.ttf');
+}
+.sub-filter-icon {
+  position: absolute;
+  background-color: #3f51b5 !important;
+  height: 80px;
+  width: 100%;
+  z-index: 22; }
+
+.subject-detail {
+  margin-top: -8% !important; }
+
+.sub-icon-filter {
+  margin-top: 49px !important;
+  font-size: x-large !important;
+  right: -5% !important; }
+
+.user-photo {
+  min-width: 68px !important;
+  min-height: 68px !important;
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
+  margin-left: -16px;
+  border-radius: 34px !important; }
+
+.subject-desc {
+  margin: 0 0 5px !important; }
+
+.sub-title {
+  font-size: 18px !important; }
+
+.deleteMyProfile {
+  right: 15px;
+  position: absolute;
+  top: 20px; }
+
+section.chats div {
+  max-width: 255px;
+  word-wrap: break-word;
+  margin-bottom: 20px;
+  line-height: 24px; }
+
+section.chats p {
+  margin: 0; }
+
+section.chats p.username {
+  max-width: 255px;
+  font-weight: bold; }
+
+p.notification {
+  text-align: center;
+  font-style: italic; }
+
+.clear {
+  clear: both; }
+
+.from-me {
+  position: relative;
+  padding: 10px 20px;
+  color: white;
+  background: #0B93F6;
+  border-radius: 25px;
+  float: right; }
+
+.from-me:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  bottom: -2px;
+  right: -7px;
+  height: 20px;
+  border-right: 20px solid #0B93F6;
+  border-bottom-left-radius: 16px 14px;
+  -webkit-transform: translate(0, -2px); }
+
+.from-me:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  bottom: -2px;
+  right: -56px;
+  width: 26px;
+  height: 20px;
+  background: #f6f6f6;
+  border-bottom-left-radius: 10px;
+  -webkit-transform: translate(-30px, -2px); }
+
+.from-them {
+  position: relative;
+  padding: 10px 20px;
+  background: #E5E5EA;
+  border-radius: 25px;
+  color: black;
+  float: left; }
+
+.from-them:before {
+  content: "";
+  position: absolute;
+  z-index: 2;
+  bottom: -2px;
+  left: -7px;
+  height: 20px;
+  border-left: 20px solid #E5E5EA;
+  border-bottom-right-radius: 16px 14px;
+  -webkit-transform: translate(0, -2px); }
+
+.from-them:after {
+  content: "";
+  position: absolute;
+  z-index: 3;
+  bottom: -2px;
+  left: 4px;
+  width: 26px;
+  height: 20px;
+  background: white;
+  border-bottom-right-radius: 10px;
+  -webkit-transform: translate(-30px, -2px); }
+
+.username-list {
+  line-height: 38px; }
+
+.expanded {
+  top: 80px !important; }
+
+.message-read {
+  color: #9FCCAC !important; }
+
+.message-unread {
+  color: gray !important; }
+
+#pricing-content.filterContent {
+  padding-top: 0px;
+  margin-top: -20px; }
+
+#pricing-content.filterContent .price-header {
+  padding-bottom: 5px; }
+
+#pricing-content.filterContent .row {
+  margin-top: -15px; }
+
+#pricing-content.filterContent md-switch, md-radio-button, md-checkbox {
+  margin: 4px !important;
+  margin-left: 15px !important; }
+
+#pricing-content.filterContent .col {
+  padding-top: 15px !important; }
+
+.fab-btn-right {
+  right: 5% !important;
+  float: right !important; }
+
+.has-header-filter {
+  top: 95px; }
+
+.online-offline {
+  width: 32px;
+  height: 32px !important;
+  left: 6px;
+  font-size: 16px !important;
+  top: 31px !important; }
+
+.online-circle {
+  color: #8bc79d !important; }
+
+.offline-circle {
+  color: #C3C3C3 !important; }
+
+.headerExpanded .bar.bar-header {
+  height: 80px !important; }
+
+.menu .bar.bar-header.expanded {
+  transition: all .5s ease-in-out;
+  height: 80px !important; }
+
+.bar .title {
+  height: 100% !important; }
+
+.chat-profile-info {
+  background-color: transparent !important;
+  border-color: transparent !important; }
+
+.chat-profile-info p, .chat-profile-info h2 {
+  color: white !important; }
+
+.chat-profile-info h2 {
+  font-weight: bold !important; }
+
+.chat-profile-info p {
+  color: white !important;
+  margin-top: -10px; }
+
+.subject-element {
+  font-size: 12px !important;
+  border-radius: 5px !important;
+  background-color: gainsboro !important;
+  margin: 10px !important;
+  margin-bottom: 15px !important; }
+
+.sub-row {
+  height: 70px !important; }
+
+.subject-title {
+  font-size: 12px !important;
+  margin-bottom: 5px;
+  margin-top: 6px !important; }
+
+.subject-md-list-item-text {
+  width: 98%; }
+
+.sub-icon-add {
+  left: 10px !important;
+  margin-top: 23px !important; }
+
+#menu-dashboard-content .menu-dashboard-footer md-whiteframe i {
+  font-size: 14px !important; }
+
+.loudly {
+  font-size: 3em !important;
+  font-weight: 700 !important;
+  margin-bottom: 10px !important;
+  font-style: normal !important;
+}
+
+.msgs-button {
+  position: absolute !important;
+  right: 0px !important; }
+
+.circle-new-message {
+  position: absolute;
+  font-size: 16px;
+  top: -12px;
+  right: 9px;
+  color: #c73636; }
+
+.message-icon {
+  font-size: 33px !important; }
+
+.menu-circle-new-message {
+  position: absolute;
+  font-size: 16px;
+  top: 4px;
+  left: 5px;
+  color: #c73636;
+  z-index: 1; }
+
+.failed::-webkit-input-placeholder {
+  color: red; }
+
+.chat-time-span {
+  position: relative;
+  top: 10px;
+  font-size: 10px; }
+
+.chat-date-span {
+  margin: auto;
+  margin-bottom: 10px;
+  position: relative;
+  padding: 5px 20px;
+  background: #E5E5EA;
+  border-radius: 25px;
+  color: #000;
+  text-align: center;
+  width: 133px;
+  font-size: 12px; }
+
+.tabs-top > .tabs, .tabs.tabs-top{
+  top: 0 !important;
+}
+.has-tabs-top{
+  top: 60px !important;
+}
+
+.login-footer{
+  position: absolute;
+  bottom: 15px;
+  padding: 15px;
+  width: 100%;
+}
+.login-footer p{
+  text-align: center;
+  padding: 20px;
+  color: white;
+}
+.fb-page{
+  background-image: url('../img/login-bg.png');
+  background-size: 100% 100%;
+  background-repeat: repeat-x;
+  height: 100%;
+  width: 100%;
+}
+.login-top{
+  top: 65px;
+  position: relative;
+  left: 14%;
+}
+.login-top .list .item img{
+  max-width: 86px !important;
+}
+.login-top .list .item{
+  background-color: transparent !important;
+  border: 0px !important;
+}
+.login-footer .fb-button{
+  background-color: #3e60aa;
+}
+.think-out{
+  color: white !important;
+  font-size: 30px !important;
+  font-family: 'thinkout';
+
+}
+.login-loudly{
+  color: white !important;
+  font-size: 60px !important;
+  font-family: 'loudly';
+  position: relative;
+  top: 12px;
+  font-weight: bold;
+
+}
+
+.item-thumbnail-left, .item-thumbnail-left .item-content{
+  padding-left: 95px !important;
+}
+.fb-container{
+  position: relative;
+}
+.fb-container .f1{
+  width: 10%;
+  position: absolute;
+}
+.fb-container .f2{
+  left:15%;
+  width: 90%;
+  position: absolute;
+}
+
+.filter-fotter{
+  width: 15% !important;
+
+  bottom: 16px;
+  left: 10px;
+  background: transparent;
+}
+.filter-fotter i{
+  width: 100%;
+  font-size: 40px;
+}
+.subject-list .list .item{
+  height: 115px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  padding-left: 100px;
+}
+.subject-list .list .item img{
+  max-width: 70px;
+  max-height: 70px;
+}
+.subject-list .subject-container{
+  right: 5px;
+  position: absolute;
+  top: 12px;
+}
+.subject-list .subject-container img{
+  padding-top: 10px;
+  width: 30px
+}
+
+.tabs .tab-item .icon.subjects-blue {
+  background-repeat: no-repeat;
+  background-position: 50%;
+  height: 80%;
+  background-image: url('../img/logo.png');
+  background-size:contain;
+}
+.tabs .tab-item .icon.setting_blue {
+  background-repeat: no-repeat;
+  background-position: 50%;
+  height: 80%;
+  background-image: url('../img/setting_blue.png');
+  background-size:contain;
+}
+.tabs .tab-item .icon.setting_grey {
+  background-repeat: no-repeat;
+  background-position: 50%;
+  height: 80%;
+  background-image: url('../img/setting_grey.png');
+  background-size:contain;
+}
+.tabs .tab-item .icon.msg_blue {
+  background-repeat: no-repeat;
+  background-position: 50%;
+  height: 80%;
+  background-image: url('../img/msg_blue.png');
+  background-size:contain;
+}
+.tabs .tab-item .icon.msg_grey {
+  background-repeat: no-repeat;
+  background-position: 50%;
+  height: 80%;
+  background-image: url('../img/msg_grey.png');
+  background-size:contain;
+}
+.tabs .tab-item .icon.add-subject-blue {
+  background-repeat: no-repeat;
+  background-position: 50%;
+  height: 70%;
+  background-image: url('../img/add_blue.png');
+  background-size:contain;
+  margin-top: 5px !important;
+}
+.tabs .tab-item .icon.add-subject-grey {
+  background-repeat: no-repeat;
+  background-position: 50%;
+  height: 70%;
+  background-image: url('../img/add_grey.png');
+  background-size:contain;
+  margin-top: 5px !important;
+}
+
+.tabs .tab-item .icon.subjects-grey {
+  background-repeat: no-repeat;
+  background-position: 50%;
+  height: 80%;
+  background-image: url('../img/logo_grey.png');
+  background-size:contain;
+}
+
+.gray-bg{
+  background-color: #e3e3e3;
+}
+.tabs{
+  height: 56px;
+}
+.tabs-top.tabs-striped .tab-item{
+  padding-top: 4px;
+}
+.tabs-striped.tabs-color-positive .tab-item.tab-item-active, .tabs-striped.tabs-color-positive .tab-item.active, .tabs-striped.tabs-color-positive .tab-item.activated{
+  border: none;
+}
+.item-icon-left .icon, .item-icon-right .icon{
+
+  color: #8e8989;
+}
+.ion-chevron-right{
+  font-size: 20px !important;
+}
+.add-subject-header{
+  background-color: #7f7f7f;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  font-family: 'loudly';
+}
