--- a/www/templates/subjects/html/addSubject-s2.html
+++ b/www/templates/subjects/html/addSubject-s2.html
@@ -4,6 +4,7 @@
     <div class="content">
       <ion-list>
         <ion-item class="add-subject-header">
+          <i ng-click="goToChat(message)" class="icon ion-arrow-left-c"></i>
           <span>You are talking about... e</span>
         </ion-item>
         <ion-item class="item-avatar item-icon-right" ng-repeat="category in categories">
