--- a/www/templates/subjects/html/addSubject-s1.html
+++ b/www/templates/subjects/html/addSubject-s1.html
@@ -4,8 +4,8 @@
     <div class="content">
       <ion-list>
         <ion-item class="add-subject-header">
-
           <span>You are talking about...</span>
+          <span class="add-subject-step">1/1</span>
         </ion-item>
         <ion-item ui-sref="tab.addSubject-s2" class="item-avatar item-icon-right" ng-repeat="category in categories">
           <img ng-src="{{category.image_url}}">
@@ -13,6 +13,7 @@
           <i ng-click="goToChat(message)" class="icon ion-chevron-right"></i>
         </ion-item>
       </ion-list>
+
     </div>
   </ion-content>
 </ion-view>
