--- a/www/templates/messages/html/messages.html
+++ b/www/templates/messages/html/messages.html
@@ -2,7 +2,7 @@
 
   <ion-content >
     <div class="content">
-      <div class="list">
+      <div class="list messages">
         <a class="item item-avatar item-icon-right" ng-repeat="message in messages">
 
           <img ng-click="goToUserProfile(message)" ng-src="{{message.fbPhotoUrl}}">
