--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -533,3 +533,33 @@ textarea, input::-webkit-input-placeholder {
 .message-footer input{
   height: 40px !important;
 }
+.profile-header{
+  height: 40%;
+  padding: 0px;
+  background-image: url("../img/profilebg.png") !important;
+  background-size: 100% 100%;
+  background-repeat: repeat-x;
+  background-position: 0px 6px;
+}
+.profile-details img{
+  height: 100px;
+  border-radius: 50px;
+  top: 26%;
+}
+.profile-details{
+  top: 24%;
+  width: 100%;
+  text-align: center;
+  position: relative;
+}
+.profile-details h2{
+  font-size: 18px;
+  color: white;
+  font-weight: bold;
+}
+.profile-details button{
+  background-color: #0e50a3 !important;
+}
+.profile-page{
+  top: 40% !important;
+}
