--- a/www/templates/subjects/html/addSubject-s2.html
+++ b/www/templates/subjects/html/addSubject-s2.html
@@ -6,7 +6,7 @@
         <ion-item class="add-subject-header">
           <i ui-sref="tab.addSubject-s1" class="icon ion-arrow-left-c"></i>
           <span class="add-subject-header-span">You are talking about...</span>
-          <span class="add-subject-step">1/2</span>
+          <span class="add-subject-step">2/2</span>
         </ion-item>
       <div class="add-subject">
         <input required name="noteTitle" placeholder="Subject Title *" ng-model="subject.title">
@@ -16,7 +16,7 @@
       </div>
       </ion-list>
 
-      <div ng-class="{'create-subject-btn-grey': subject.description.length<=0 || subject.title.length<=0, 'create-subject-btn-blue': subject.description.length>0 && subject.title.length>0}" class="create-subject-btn">
+      <div ng-click="createSubject()" ng-class="{'create-subject-btn-blue': subject.description.length>0 && subject.title.length>0}" class="create-subject-btn create-subject-btn-grey">
 
       </div>
     </div>
