--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -10337,3 +10337,11 @@ textarea, input::-webkit-input-placeholder {
 
 .profile-page {
   top: 40% !important; }
+
+.profile-page .button-border a {
+  height: 60px !important;
+  font-size: 13px;
+  border: 1px solid #e8e8e8 !important; }
+
+.profile-page .button-border a .count {
+  height: 16px; }
