--- a/www/templates/subjects/html/filter.html
+++ b/www/templates/subjects/html/filter.html
@@ -1,8 +1,9 @@
-<ion-modal-view>
+<ion-modal-view class="custome-modal">
   <ion-header-bar>
     <h1 class="title">My Modal title</h1>
   </ion-header-bar>
   <ion-content>
     Hello!
+
   </ion-content>
 </ion-modal-view>
