--- a/www/templates/subjects/html/subjects.html
+++ b/www/templates/subjects/html/subjects.html
@@ -26,6 +26,6 @@
 
   </ion-content>
   <div style="height: 55px;" class="bar bar-footer filter-fotter">
-    <img style="width: 50px; height: 50px" src="/img/filter.png">
+    <img ng-click="goToFilter()" style="width: 50px; height: 50px" src="/img/filter.png">
   </div>
 </ion-view>
