--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -10374,18 +10374,15 @@ textarea, input::-webkit-input-placeholder {
   max-width: 70px !important;
   max-height: 70px !important; }
 
-.container {
-  width: 240px; }
-
 .container ul li {
-  width: 70px;
-  height: 70px;
+  width: 33%;
+  height: 20%;
   float: left;
-  padding: 40px !important; }
+  padding: 10px; }
 
 .container ul li img {
-  width: 70px;
-  height: 70px;
+  width: 100%;
+  height: 100%;
   padding: 5px !important; }
 
 .container ul {
@@ -10394,3 +10391,37 @@ textarea, input::-webkit-input-placeholder {
 .filter-title {
   text-align: center !important;
   font-weight: 300 !important; }
+
+.modal-backdrop-bg {
+  background-color: #949292;
+  opacity: 0.9; }
+
+.filter-list .list {
+  width: 80% !important;
+  left: 10%; }
+
+.filter-list .list .item {
+  border-top: none;
+  border-right: none;
+  border-left: none; }
+
+.filter-list .gender-button {
+  min-height: 38px;
+  font-size: 13px !important;
+  padding-left: 5px;
+  height: 38px;
+  line-height: 38px; }
+
+.filter-list .center {
+  margin-left: 15px;
+  margin-right: 15px; }
+
+.toggle.toggle-assertive input:checked + .track {
+  background-color: #787878;
+  border-color: #787878; }
+
+.filter-clicked-button {
+  background-color: #787878; }
+
+.filter-unclicked-button {
+  background-color: #e3e4e3; }
