--- a/www/templates/subjects/html/filter.html
+++ b/www/templates/subjects/html/filter.html
@@ -3,14 +3,39 @@
     <span class="title filter-title">Filter</span>
   </ion-header-bar>
   <ion-content ng-controller="filterCtrl">
-    Hello!
-    <div class="container">
-      <ul>
-        <li ng-repeat="category in categories">
-          <img ng-src="{{categoriesUrl}}{{category._id}}.png">
-        </li>
+    <ion-list class="filter-list">
+      <ion-item class="item-toggle">
+        Near Me
+        <label class="toggle toggle-assertive">
+          <input type="checkbox">
+          <div class="track">
+            <div class="handle"></div>
+          </div>
+        </label>
+      </ion-item>
+      <ion-item>
+        <div class="button-bar">
+          <button class="button gender-button">
+            Female
+          </button>
+          <button class="button gender-button center" ng-class="{'filter-clicked-button': myFilter.gender=='both', 'filter-unclicked-button': myFilter.gender!='both'}">
+            Both
+          </button>
+          <button class="button gender-button">
+            Male
+          </button>
+        </div>
+      </ion-item>
 
-      </ul>
-    </div>
+      <div class="container">
+        <ul>
+          <li ng-repeat="category in categories">
+            <img ng-src="{{categoriesUrl}}{{category._id}}.png">
+          </li>
+
+        </ul>
+      </div>
+    </ion-list>
+
   </ion-content>
 </ion-modal-view>
