fix do refresh subjects

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -10425,3 +10425,6 @@ textarea, input::-webkit-input-placeholder {
 
 .filter-unclicked-button {
   background-color: #e3e4e3; }
+
+button:active {
+  background: #787878; }
