--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -661,3 +661,6 @@ textarea, input::-webkit-input-placeholder {
 .filter-unclicked-button{
   background-color: #e3e4e3;
 }
+button:active{
+  background: #787878;
+}
