--- a/www/templates/chat/html/chat.html
+++ b/www/templates/chat/html/chat.html
@@ -10,7 +10,7 @@
 
     </a>
 
-    <a class="button button-icon button-clear ion-android-more-vertical chat-menu" ng-click="toggleLeft()"></a>
+    <a class="button button-icon button-clear ion-android-more-vertical chat-menu" ng-click="popover.show($event)"></a>
   </div>
 
   <ion-content ng-class="{expanded: isExpanded}" id="menu-dashboard-content" class="padding">
