--- a/www/templates/subjects/html/addSubject-s2.html
+++ b/www/templates/subjects/html/addSubject-s2.html
@@ -1,5 +1,12 @@
 <ion-view>
+  <div class="bar bar-header bar-calm">
 
+    <ion-item class="add-subject-header">
+      <i ui-sref="tab.addSubject-s1" class="icon ion-arrow-left-c"></i>
+      <span class="add-subject-header-span">You are talking about...</span>
+      <span class="add-subject-step">2/2</span>
+    </ion-item>
+  </div>
   <ion-content >
     <div class="content">
       <ion-list>
